test/types/records/engin/parentheseslessConstErrorField.good
parentheseslessConstErrorField.chpl:7: syntax error: 'new' expression is missing its argument list
parentheseslessConstErrorField.chpl:14: syntax error: 'new' expression is missing its argument list
